CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(AutoDriveSystem)

###### auto drive system lib
SET(MAJOR_VERSION 1)
SET(MINOR_VERSION 0)
SET(SOVERSION 42)
SET(LIB_NAME auto_drive_system)
SET(SHARED_LIB_NAME ${LIB_NAME}_shared)
SET(STATIC_LIB_NAME ${LIB_NAME}_static)
AUX_SOURCE_DIRECTORY(src LIB_SRC_FILES)
INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}/include")

# shared lib
ADD_LIBRARY(${SHARED_LIB_NAME} SHARED ${LIB_SRC_FILES})
SET_TARGET_PROPERTIES(${SHARED_LIB_NAME} PROPERTIES
	OUTPUT_NAME ${LIB_NAME}
	VERSION ${MAJOR_VERSION}.${MINOR_VERSION}
	SOVERSION ${SOVERSION}
	CLEAN_DIRECT_OUTPUT 1)

# static lib
ADD_LIBRARY(${STATIC_LIB_NAME} STATIC ${LIB_SRC_FILES})
SET_TARGET_PROPERTIES(${STATIC_LIB_NAME} PROPERTIES
	OUTPUT_NAME ${LIB_NAME}
	VERSION ${MAJOR_VERSION}.${MINOR_VERSION}
	SOVERSION ${SOVERSION}
	CLEAN_DIRECT_OUTPUT 1)


###### auto drive system test
SET(TEST_NAME test)
AUX_SOURCE_DIRECTORY(${TEST_NAME} TEST_SRC_FILES)
INCLUDE_DIRECTORIES(
"${PROJECT_SOURCE_DIR}/include"
"${PROJECT_SOURCE_DIR}/test/include"
)
ADD_EXECUTABLE(${TEST_NAME} ${TEST_SRC_FILES})
TARGET_LINK_LIBRARIES(${TEST_NAME} ${SHARED_LIB_NAME})


