
###########################
# CMakeLists.txt Ä£°åÎÄ¼þ #
###########################

###### general settings
SET(_PROJECT_NAME_ AutoDriveSystem)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(${_PROJECT_NAME_})

###### library definition
SET(_MAJOR_VERSION_ 1)
SET(_MINOR_VERSION_ 0)
SET(_SOVERSION_ 42)
SET(_LIB_NAME_ auto_drive_system)
SET(_SHARED_LIB_NAME_ ${_LIB_NAME_}_shared)
SET(_STATIC_LIB_NAME_ ${_LIB_NAME_}_static)
SET(_LIB_SRC_DIR_ src)
AUX_SOURCE_DIRECTORY(${_LIB_SRC_DIR_} _LIB_SRC_FILES_)
INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}/include")

# shared lib
ADD_LIBRARY(${_SHARED_LIB_NAME_} SHARED ${_LIB_SRC_FILES_})
SET_TARGET_PROPERTIES(${_SHARED_LIB_NAME_} PROPERTIES
	OUTPUT_NAME ${_LIB_NAME_}
	VERSION ${_MAJOR_VERSION_}.${_MINOR_VERSION_}
	SOVERSION ${_SOVERSION_}
	CLEAN_DIRECT_OUTPUT 1)

# static lib
ADD_LIBRARY(${_STATIC_LIB_NAME_} STATIC ${_LIB_SRC_FILES_})
SET_TARGET_PROPERTIES(${_STATIC_LIB_NAME_} PROPERTIES
	OUTPUT_NAME ${_LIB_NAME_}
	VERSION ${_MAJOR_VERSION_}.${_MINOR_VERSION_}
	SOVERSION ${_SOVERSION_}
	CLEAN_DIRECT_OUTPUT 1)


###### auto drive system test
SET(_TEST_FOLDER_ test)
SET(_TEST_TARGET_ test)
AUX_SOURCE_DIRECTORY(${_TEST_FOLDER_} _TEST_SRC_FILES_)
INCLUDE_DIRECTORIES(
"${PROJECT_SOURCE_DIR}/include"
"${PROJECT_SOURCE_DIR}/test/include"
)
ADD_EXECUTABLE(${_TEST_TARGET_} ${_TEST_SRC_FILES_})
TARGET_LINK_LIBRARIES(${_TEST_TARGET_} ${_SHARED_LIB_NAME_})


